Tue Oct 16 21:38:15 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (rb_f_missing): check stack level with rb_stack_check().

	* eval.c (rb_call0): ditto.

	* eval.c, intern.h (rb_stack_check): added. [new]

Tue Oct 16 00:07:06 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* parse.y (yylex): disallow alpha-numeric and mbchar for
	  terminator of %string.

Wed Oct 10 03:11:47 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* parse.y (parse_quotedwords): %w(...) is not a string.

Tue Oct  9 17:08:00 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* eval.c (thread_status_name): separated from
	  rb_thread_inspect(). return string expression for thread status.

	* eval.c (rb_thread_status, rb_thread_inspect): use
	  thread_status_name().

	* eval.c (rb_thread_priority_set): return the priority not but
	  self.

Sat Oct  6 23:07:08 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): NODE_MATCH3 was confusing left and right. sigh.

Fri Oct  5 15:27:30 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* marshal.c: backport from 1.7 marshal.c

Thu Oct  4 14:11:03 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/socket/socket.c (ruby_connect): EALREADY is the equivalent
	  for EINPROGRESS in ws2_32.lib.

Wed Oct  3 13:32:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_aset): should maintain original negative
	  offset.

	* string.c (rb_str_aset_m): ditto.

	* re.c (rb_reg_nth_match): should check negative nth.

	* re.c (rb_reg_nth_defined): ditto.

Tue Oct  2 19:12:47 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/ftools.rb (catname): allow trailing '/' for the destination.

Tue Oct  2 18:31:20 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): should override existing class.

Mon Oct  1 19:18:54 2001  Tanaka Akira  <akr@m17n.org>

	* ext/socket/socket.c (unix_addr): getsockname(2) may result len = 0. 

	* ext/socket/socket.c (unix_peeraddr): getpeername(2) may result
	  len = 0.
